change bar color

--- a/ballGame.html
+++ b/ballGame.html
@@ -20,7 +20,7 @@
             width: 100px;
             height: 20px;
             bottom: 40px;
-            background-color: brown;
+            background-color: purple;
         }
 
         #id_ball{
